# rfp_analyzer

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routers/: documents.py
app/core/: config.py  logging.py
app/db/: base.py  session.py
app/db/models/: __init__.py  chunk.py  document.py  processing_job.py  section.py  trait.py
app/schemas/: chunk.py  document.py  job.py  trait.py
app/services/: chunking_service.py  document_service.py  embeddings_service.py  extraction_service.py  job_service.py  parsing_service.py  retrieval_service.py  storage_service.py  transformer_service.py
app/utils/: file_paths.py  prompts.py  text_processing.py  tokenization.py
app/workers/: celery_app.py  tasks.py
data/processed_files/0a8983fe-8b72-4e87-9796-95d5c26cf086/: chunks.json
data/processed_files/0c611ab3-3c51-43cf-9eaa-59be1fc6e084/: chunks.json
data/processed_files/0f198d7f-3a21-4bcb-804b-9bbd08b705c3/: chunks.json
data/processed_files/162c5634-a06d-4bd0-9c41-87cb308d8f01/: chunks.json
data/processed_files/24ea423f-ec0d-4766-bceb-d96683c2cc8c/: chunks.json
data/processed_files/2c1937a8-dc97-4ca7-b262-c36b208672fa/: chunks.json
data/processed_files/3a8a39bf-9313-4029-99e2-0853e6050fc6/: chunks.json
data/processed_files/3e452313-e224-4eeb-b3da-79b77a55421d/: chunks.json
data/processed_files/42c585fd-949e-4a59-84fe-01be9310cf84/: chunks.json
data/processed_files/47855eeb-9892-4afd-90b8-3f8090b1e773/: chunks.json
data/processed_files/4d124b3f-695f-4d1c-8c58-5bdc40f5728f/: chunks.json
docs/: data_migration.md
(+21 files in other folders)
