[project]
name = "rfp-analyzer"
version = "0.1.0"
description = "Backend services for automated RFP/RFQ analysis"
requires-python = ">=3.11"
authors = [{ name = "Stormy", email = "dev@example.com" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.0",
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "pydantic-settings>=2.2.1",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "openai>=1.3.7",
    "pgvector>=0.2.4",
    "pymupdf>=1.23.7",
    "pdfplumber>=0.10.3",
    "unstructured[pdf]>=0.18.20",
    "layoutparser[layoutmodels]>=0.3.4",
    "pdfminer.six>=20231228",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.7",
    "torch>=2.3.0",
    "transformers>=4.44.2",
    "sentence-transformers>=3.0.1",
    "tiktoken>=0.5.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "httpx>=0.25.2",
    "ruff>=0.1.7"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
